--- a/project-addons/product_serial_number/views/product_view.xml
+++ b/project-addons/product_serial_number/views/product_view.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
-         <record id="view_product_template_custom_cc" model="ir.ui.view">
-            <field name="name">view.product.template.custom.cc</field>
+         <record id="cc_view_product_template" model="ir.ui.view">
+            <field name="name">cc.view.product.templatec</field>
             <field name="model">product.template</field>
             <field name="inherit_id" ref="product.product_template_form_view"/>
             <field name="arch" type="xml">
@@ -14,14 +14,26 @@
             </field>
         </record>
 
-        <record id="product_template_search_view_custom_cc" model="ir.ui.view">
-            <field name="name">product.template.search.view.custom.cc</field>
+        <record id="cc_product_template_search_view" model="ir.ui.view">
+            <field name="name">cc.product.template.search.view</field>
             <field name="model">product.template</field>
             <field name="inherit_id" ref="product.product_template_search_view"/>
             <field name="arch" type="xml">
                <filter  name="services" position="before">
                     <filter string="Manage by serial number" name="mgmt_serial" domain="[('serial_mgmt','=',True)]"/>
                </filter>
+            </field>
+        </record>
+
+        <!-- shortcut for developement -->
+        <record id="cc_product_product_form" model="ir.ui.view">
+            <field name="name">cc.product.product.form</field>
+            <field name="model">product.product</field>
+            <field name="inherit_id" ref="product.product_normal_form_view"/>
+            <field name="arch" type="xml">
+                <field name="barcode" position="after">
+                    <field name="product_tmpl_id"/>
+                </field>
             </field>
         </record>
 </odoo>
