--- a/project-addons/product_serial_number/views/purchase_view.xml
+++ b/project-addons/product_serial_number/views/purchase_view.xml
@@ -5,6 +5,13 @@
         <field name="model">purchase.order</field>
         <field name="inherit_id" ref="purchase.purchase_order_form"/>
         <field name="arch" type="xml">
+            <div name="button_box" position="inside">
+                <button name="view_lots_button" type="object" class="oe_stat_button" icon="fa-list">
+                    <field name="count_lots"  widget="statinfo"/>
+                </button>
+            </div>
+
+
             <xpath expr="//field[@name='order_line']//tree" position="attributes">
                 <attribute name="editable"/>
             </xpath>
@@ -15,6 +22,7 @@
                         <field name="brand"/>
                         <field name="model"/>
                         <field name="id_product"/>
+                        <field name="sale_price"/>
                     </group>
                 </page>
                 <page string="Attributes">
@@ -30,6 +38,12 @@
                         <field name="image_ids" widget="many2many_binary" string="Attach a file" nolabel="1" colspan="2" />
                     </group>
                 </page> -->
+            </xpath>
+            <xpath expr="//field[@name='order_line']//form//field[@name='date_planned']" position="after">
+                <field name="lot_qty"/>
+            </xpath>
+            <xpath expr="//field[@name='order_line']//tree//field[@name='product_qty']" position="after">
+                <field name="lot_qty"/>
             </xpath>
 
         </field>
