--- a/project-addons/product_serial_number/views/purchase_view.xml
+++ b/project-addons/product_serial_number/views/purchase_view.xml
@@ -33,11 +33,23 @@
                         </tree>
                     </field>
                 </page>
-                <page string="Images">
+                <page string="Add Images">
                     <group >
-                        <field name="image_ids" widget="many2many_binary" string="Attach a file" nolabel="1" colspan="2" />
+                        <field name="multi_image_ids" widget="many2many_binary" string="Attach a file" nolabel="1" colspan="2" />
                     </group>
                 </page>
+                <page string="Images">
+                        <group>
+                            <field
+                                name="image_ids"
+                                nolabel="1"
+                                context="{
+                                    'default_owner_model': 'stock.production.lot',
+                                    'default_owner_id': id,
+                                }"
+                                mode="kanban"/>
+                        </group>
+                </page>     
             </xpath>
             <xpath expr="//field[@name='order_line']//form//field[@name='date_planned']" position="after">
                 <field name="lot_qty"/>
