[FIX]product_serial_number: Imagenes readonly

--- a/project-addons/product_serial_number/views/purchase_view.xml
+++ b/project-addons/product_serial_number/views/purchase_view.xml
@@ -47,6 +47,7 @@
                                     'default_owner_model': 'stock.production.lot',
                                     'default_owner_id': id,
                                 }"
+                                readonly="1"
                                 mode="kanban"/>
                         </group>
                 </page>     
