--- a/project-addons/product_serial_number/views/stock_production_lot_view.xml
+++ b/project-addons/product_serial_number/views/stock_production_lot_view.xml
@@ -41,6 +41,7 @@
                                 'default_owner_model': 'stock.production.lot',
                                 'default_owner_id': id,
                             }"
+                            readonly="1"
                             mode="kanban"/>
                     </group>
                 </page>     
