--- a/project-addons/product_serial_number/views/purchase_view.xml
+++ b/project-addons/product_serial_number/views/purchase_view.xml
@@ -28,7 +28,8 @@
                 <page string="Attributes">
                     <field name="attribute_line_ids" widget="one2many" context="{'show_attribute': False}" nolabel="1">
                         <tree string="Attributes" editable="bottom">
-                            <field name="attribute_id" attrs="{'readonly': [('id', '!=', False)]}"/>
+                            <!-- <field name="attribute_id" attrs="{'readonly': [('id', '!=', False)]}" context="{'limit_attributes_product': parent.product_id}"/> -->
+                            <field name="attribute_id"  context="{'limit_attributes_product': parent.product_id}"/>
                             <field name="value_ids" widget="many2many_tags" options="{'no_create_edit': True}" context="{'default_attribute_id': attribute_id, 'show_attribute': False}"/>
                         </tree>
                     </field>
