--- a/project-addons/product_serial_number/views/stock_production_lot_view.xml
+++ b/project-addons/product_serial_number/views/stock_production_lot_view.xml
@@ -19,10 +19,13 @@
                         <field name="id_product"/>
                         <field name="purchase_line_id"/>
                     </group>
+                </page>
+                <page string="Attributes">
                     <group string="Attributes">
                         <field name="attribute_line_ids" widget="one2many" context="{'show_attribute': False}" nolabel="1">
                             <tree string="Attributes" editable="bottom">
-                                <field name="attribute_id" attrs="{'readonly': [('id', '!=', False)]}"/>
+                                <!-- <field name="attribute_id" attrs="{'readonly': [('id', '!=', False)]}" context="{'limit_attributes_product': parent.product_id}"/> -->
+                                <field name="attribute_id"   context="{'limit_attributes_product': parent.product_id}"/>
                                 <field name="value_ids" widget="many2many_tags" options="{'no_create_edit': True}" context="{'default_attribute_id': attribute_id, 'show_attribute': False}"/>
                             </tree>
                         </field>
