--- a/project-addons/product_serial_number/views/purchase_view.xml
+++ b/project-addons/product_serial_number/views/purchase_view.xml
@@ -15,8 +15,7 @@
             <xpath expr="//field[@name='order_line']//tree" position="attributes">
                 <attribute name="editable"/>
             </xpath>
-            <xpath expr="//field[@name='order_line']//form//notebook" position="inside">
-                <page string="Product Info">
+            <xpath expr="//field[@name='order_line']//form//group[1]" position="after">
                     <group>
                         <field name="ean13"/>
                         <field name="brand"/>
@@ -24,16 +23,19 @@
                         <field name="id_product"/>
                         <field name="sale_price"/>
                     </group>
-                </page>
-                <page string="Attributes">
-                    <field name="attribute_line_ids" widget="one2many" context="{'show_attribute': False}" nolabel="1">
-                        <tree string="Attributes" editable="bottom">
-                            <!-- <field name="attribute_id" attrs="{'readonly': [('id', '!=', False)]}" context="{'limit_attributes_product': parent.product_id}"/> -->
-                            <field name="attribute_id"  context="{'limit_attributes_product': parent.product_id}"/>
-                            <field name="value_ids" widget="many2many_tags" options="{'no_create_edit': True}" context="{'default_attribute_id': attribute_id, 'show_attribute': False}"/>
-                        </tree>
-                    </field>
-                </page>
+                    <group string="Attributes">
+                        <field name="attribute_line_ids" widget="one2many" context="{'show_attribute': False}" nolabel="1">
+                            <tree string="Attributes" editable="bottom">
+                                <!-- <field name="attribute_id" attrs="{'readonly': [('id', '!=', False)]}" context="{'limit_attributes_product': parent.product_id}"/> -->
+                                <field name="attribute_id"  context="{'limit_attributes_product': parent.product_id}"/>
+                                <field name="value_ids" widget="many2many_tags" options="{'no_create_edit': True}" context="{'default_attribute_id': attribute_id, 'show_attribute': False}"/>
+                            </tree>
+                        </field>
+                    </group>
+            </xpath>
+
+            <!-- IMAGE TABS -->
+            <xpath expr="//field[@name='order_line']//form//notebook" position="inside">
                 <page string="Add Images">
                     <group>
                         <button name="copy_image_to_lots" string="Copy image to related lots" type="object" class="oe_link"/>
@@ -54,6 +56,8 @@
                         </group>
                 </page>     
             </xpath>
+
+            <!-- Campos cantidades -->
             <xpath expr="//field[@name='order_line']//form//field[@name='date_planned']" position="after">
                 <field name="lot_qty"/>
             </xpath>
