--- a/project-addons/product_serial_number/views/product_view.xml
+++ b/project-addons/product_serial_number/views/product_view.xml
@@ -10,7 +10,22 @@
                         <field name="serial_mgmt"/>
                         <label for="serial_mgmt"/>
                     </div>
+                    <div attrs="{'invisible':[('type', 'not in', ['product', 'consu', 'service'])]}">
+                        <field name="police"/>
+                        <label for="police"/>
+                    </div>
+                    <!-- <div attrs="{'invisible':['|', ('police', '!=', True), ('type', 'not in', ['product', 'consu', 'service'])]}">
+                        <label for="police_days"/>
+                        <field name="police_days" col="2"/> days(s)
+                    </div> -->
                 </div>
+
+                <field name="categ_id" position="after">
+                     <field name="police_days" 
+                     attrs="{
+                         'invisible':['|', ('police', '!=', True), ('type', 'not in', ['product', 'consu', 'service'])],
+                         'required':[('police', '=', True)]}"/>
+                </field>
             </field>
         </record>
 
@@ -32,7 +47,13 @@
             <field name="inherit_id" ref="product.product_normal_form_view"/>
             <field name="arch" type="xml">
                 <field name="barcode" position="after">
-                    <field name="product_tmpl_id"/>
+                    <field name="product_tmpl_id" class="oe_inline" readonly="1" invisible="0" attrs="{'required': [('id', '!=', False)]}"/>
+                </field>
+
+                <field name="uom_po_id" position="after">
+                    <field name="purchase_price_15"/>
+                    <field name="purchase_price_30"/>
+                    <field name="purchase_price_60"/>
                 </field>
             </field>
         </record>
