--- a/project-addons/product_serial_number/views/purchase_view.xml
+++ b/project-addons/product_serial_number/views/purchase_view.xml
@@ -11,6 +11,11 @@
                 </button>
             </div>
 
+            <field name="company_id" position="after">
+                <field name="recoverable_sale"/>
+                <field name="deposit_sale"/>
+            </field>
+
 
             <!-- Avoid editable in tree view -->
             <xpath expr="//field[@name='order_line']//tree" position="attributes">
@@ -23,6 +28,7 @@
                 <field name="limit_date" attrs="{
                     'invisible': [('recoverable_sale', '=', False),('deposit_sale', '=', False)],
                     'required':  ['|', ('recoverable_sale', '!=', False),('deposit_sale', '!=', False)]}"/>
+                <field name="police_date"/>
             </xpath>
 
             <xpath expr="//field[@name='order_line']//form/group/group[2]" position="after">
@@ -91,4 +97,37 @@
 
         </field>
     </record>
+
+    <record id="action_purchase_line" model="ir.actions.act_window">
+        <field name="name">Purchase Lines</field>
+        <field name="type">ir.actions.act_window</field>
+        <field name="res_model">purchase.order.line</field>
+        <field name="view_mode">tree,form</field>
+        <field name="view_id" ref="purchase.purchase_order_line_tree"/>
+        <!-- <field name="domain">[('state','in',('purchase', 'done'))]</field> -->
+        <!-- <field name="search_view_id" ref="purchase_order_view_search"/> -->
+        <!-- <field name="context">{}</field> -->
+        <!-- <field name="help" type="html">
+            <p class="o_view_nocontent_smiling_face">
+            Create a quotation
+            </p><p>
+            It will be converted into a purchase order.
+            </p>
+        </field> -->
+    </record>
+     <menuitem action="action_purchase_line" id="menu_purchase_line"
+            parent="purchase.menu_procurement_management"
+            sequence="90"/>
+    <record id="cc_sale_lot_tree_custom" model="ir.ui.view">
+        <field name="name">cc_sale_lot_tree_custom</field>
+        <field name="model">sale.order</field>
+        <field name="inherit_id" ref="sale_order_lot_selection.view_order_tree_lot"/>
+        <field name="arch" type="xml">
+            <xpath expr="//field[@name='order_line']/tree/field[@name='lot_id']" position="replace">
+                <field name="lot_id" domain="[('product_id','=', product_id), ('salable', '=', True)]" context="{'default_product_id': product_id}" groups="stock.group_production_lot"/>
+            </xpath>
+            
+        </field>
+    </record>
+
 </odoo>
