--- a/project-addons/product_serial_number/views/purchase_view.xml
+++ b/project-addons/product_serial_number/views/purchase_view.xml
@@ -12,8 +12,9 @@
             </div>
 
             <field name="company_id" position="after">
-                <field name="recoverable_sale"/>
-                <field name="deposit_sale"/>
+                <!-- <field name="recoverable_sale"/>
+                <field name="deposit_sale"/> -->
+                <field name="cc_type"/>
             </field>
 
 
@@ -23,11 +24,15 @@
             </xpath>
 
             <xpath expr="//field[@name='order_line']//form//field[@name='date_planned']" position="after">
-                <field name="recoverable_sale"/>
-                <field name="deposit_sale"/>
-                <field name="limit_date" attrs="{
+                <!-- <field name="recoverable_sale"/>
+                <field name="deposit_sale"/> -->
+                <field name="cc_type"/>
+                <!-- <field name="limit_date" attrs="{
                     'invisible': [('recoverable_sale', '=', False),('deposit_sale', '=', False)],
-                    'required':  ['|', ('recoverable_sale', '!=', False),('deposit_sale', '!=', False)]}"/>
+                    'required':  ['|', ('recoverable_sale', '!=', False),('deposit_sale', '!=', False)]}"/> -->
+                <field name="limit_date" attrs="{
+                    'invisible': [('cc_type', '=', 'normal')],
+                    'required':  [('cc_type', 'in', ('recoverable_sale' 'deposit_sale') )]}"/>
                 <field name="police_date"/>
             </xpath>
 
