--- a/project-addons/product_serial_number/views/stock_location_view.xml
+++ b/project-addons/product_serial_number/views/stock_location_view.xml
@@ -7,10 +7,12 @@
             <field name="inherit_id" ref="stock.view_location_form"/>
             <field name="arch" type="xml">
                 <field name="return_location" position="after">
-                    <field name="police"/>
+                    <!-- <field name="police"/>
+                    <field name="recoverable_sale"/>
                     <field name="deposit"/>
                     <field name="requisation"/>
-                    <field name="safe"/>
+                    <field name="safe"/> -->
+                    <field name="cc_type"/>
                 </field>
             </field>
         </record>
