--- a/project-addons/account_custom_cc/views/account_move_view.xml
+++ b/project-addons/account_custom_cc/views/account_move_view.xml
@@ -13,6 +13,10 @@
                 <field name="lot_id"/>
             </xpath>
 
+            <field name="amount_untaxed" position="after">
+                <field name="exent_untaxed"/>
+            </field>
+
         </field>
     </record>
 
