--- a/project-addons/product_serial_number/views/purchase_view.xml
+++ b/project-addons/product_serial_number/views/purchase_view.xml
@@ -106,16 +106,6 @@
         <field name="res_model">purchase.order.line</field>
         <field name="view_mode">tree,form</field>
         <field name="view_id" ref="purchase.purchase_order_line_tree"/>
-        <!-- <field name="domain">[('state','in',('purchase', 'done'))]</field> -->
-        <!-- <field name="search_view_id" ref="purchase_order_view_search"/> -->
-        <!-- <field name="context">{}</field> -->
-        <!-- <field name="help" type="html">
-            <p class="o_view_nocontent_smiling_face">
-            Create a quotation
-            </p><p>
-            It will be converted into a purchase order.
-            </p>
-        </field> -->
     </record>
      <menuitem action="action_purchase_line" id="menu_purchase_line"
             parent="purchase.menu_procurement_management"
@@ -131,5 +121,74 @@
             
         </field>
     </record>
+
+    <!-- purchase.order inherit search view -->
+    <record id="view_id" model="ir.ui.view">
+        <field name="name">purchase.order.inherit.view.search</field>
+        <field name="model">purchase.order</field>
+        <field name="inherit_id" ref="purchase.purchase_order_view_search"/>
+        <field name="arch" type="xml">
+            <!-- Add your xpath here -->
+            <filter name="my_Orders" position="after">
+                 <separator/>
+                <filter name="general" string="General purchases" domain="[('cc_type', '=', 'general')]"/>
+                <separator/>
+                <filter name="special" string="Special purchases" domain="[('cc_type', '=', 'normal')]"/>
+                <separator/>
+                <filter name="recoverable" string="Recoverable purchases" domain="[('cc_type', '=', 'recoverable')]"/>
+                <separator/>
+                <filter name="deposit" string="Deposit purchases" domain="[('cc_type', '=', 'deposit')]"/>
+            </filter>
+        </field>
+    </record>
+
+
+    <record id="cc_normal_purchase_form_action" model="ir.actions.act_window">
+        <field name="name">GENERAL PURCHASE</field>
+        <field name="type">ir.actions.act_window</field>
+        <field name="res_model">purchase.order</field>
+        <field name="view_mode">tree,kanban,form,pivot,graph,calendar,activity</field>
+        <field name="view_id" ref="purchase.purchase_order_view_tree"/>
+        <!-- <field name="domain">[('state','in',('purchase', 'done'))]</field> -->
+        <field name="search_view_id" ref="purchase.purchase_order_view_search"/>
+        <field name="context">{'default_cc_type': 'general', 'search_default_general': 'normal'}</field>
+    </record>
+    <record id="cc_special_purchase_form_action" model="ir.actions.act_window">
+        <field name="name">SPECIAL PURCHASE</field>
+        <field name="type">ir.actions.act_window</field>
+        <field name="res_model">purchase.order</field>
+        <field name="view_mode">tree,kanban,form,pivot,graph,calendar,activity</field>
+        <field name="view_id" ref="purchase.purchase_order_view_tree"/>
+        <!-- <field name="domain">[('state','in',('purchase', 'done'))]</field> -->
+        <field name="search_view_id" ref="purchase.purchase_order_view_search"/>
+        <field name="context">{'default_cc_type': 'normal', 'search_default_special': 'normal'}</field>
+    </record>
+    <record id="cc_recoverable_purchase_form_action" model="ir.actions.act_window">
+        <field name="name">RECOVERABLE PURCHASE</field>
+        <field name="type">ir.actions.act_window</field>
+        <field name="res_model">purchase.order</field>
+        <field name="view_mode">tree,kanban,form,pivot,graph,calendar,activity</field>
+        <field name="view_id" ref="purchase.purchase_order_view_tree"/>
+        <!-- <field name="domain">[('state','in',('purchase', 'done'))]</field> -->
+        <field name="search_view_id" ref="purchase.purchase_order_view_search"/>
+        <field name="context">{'default_cc_type': 'recoverable', 'search_default_recoverable': 'normal'}</field>
+    </record>
+    <record id="cc_deposit_purchase_form_action" model="ir.actions.act_window">
+        <field name="name">DEPOSIT PURCHASE</field>
+        <field name="type">ir.actions.act_window</field>
+        <field name="res_model">purchase.order</field>
+        <field name="view_mode">tree,kanban,form,pivot,graph,calendar,activity</field>
+        <field name="view_id" ref="purchase.purchase_order_view_tree"/>
+        <!-- <field name="domain">[('state','in',('purchase', 'done'))]</field> -->
+        <field name="search_view_id" ref="purchase.purchase_order_view_search"/>
+        <field name="context">{'default_cc_type': 'deposit', 'search_default_deposit': 'normal'}</field>
+    </record>
+
+    <menuitem action="cc_normal_purchase_form_action" id="menu_normal_purchase_form_action" parent="purchase.menu_procurement_management" sequence="7"/>
+    <menuitem action="cc_special_purchase_form_action" id="menu_special_purchase_form_action" parent="purchase.menu_procurement_management" sequence="8"/>
+    <menuitem action="cc_recoverable_purchase_form_action" id="menu_recoverable_purchase_form_action" parent="purchase.menu_procurement_management" sequence="9"/>
+    <menuitem action="cc_deposit_purchase_form_action" id="menu_deposit_purchase_form_action" parent="purchase.menu_procurement_management" sequence="10"/>
+
+
 
 </odoo>
